// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agGridColumnSizing getColumnWidthsFromMap should return correct ColumnWidthItem array for only column attribute 1`] = `
Array [
  Object {
    "measureColumnWidthItem": Object {
      "locators": Array [
        Object {
          "attributeLocatorItem": Object {
            "attributeIdentifier": "a_label.product.id.name",
            "element": "/gdc/md/referenceworkspace/obj/1054/elements?id=1",
          },
        },
      ],
      "width": Object {
        "value": 400,
      },
    },
  },
]
`;

exports[`agGridColumnSizing updateColumnDefinitionsWithWidths auto resized should correctly enrich columns definition by auto resized columns, manual resize map is empty and growToFit off 1`] = `
Array [
  Object {
    "cellRenderer": "loadingRenderer",
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "index": 0,
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 76,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    ],
    "field": "m_0",
    "headerName": "Amount",
    "index": 1,
    "maxWidth": 2000,
    "measureIndex": 0,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 77,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "acugFHNJgsBy",
          "localIdentifier": "m_acugFHNJgsBy",
          "name": "Won",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1272",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1272",
        },
      },
    ],
    "field": "m_1",
    "headerName": "Won",
    "index": 2,
    "maxWidth": 2000,
    "measureIndex": 1,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 116,
  },
]
`;

exports[`agGridColumnSizing updateColumnDefinitionsWithWidths auto resized should correctly enrich columns definition by auto resized columns, manual resize map is empty and growToFit on 1`] = `
Array [
  Object {
    "cellRenderer": "loadingRenderer",
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "index": 0,
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 400,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    ],
    "field": "m_0",
    "headerName": "Amount",
    "index": 1,
    "maxWidth": 2000,
    "measureIndex": 0,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 400,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "acugFHNJgsBy",
          "localIdentifier": "m_acugFHNJgsBy",
          "name": "Won",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1272",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1272",
        },
      },
    ],
    "field": "m_1",
    "headerName": "Won",
    "index": 2,
    "maxWidth": 2000,
    "measureIndex": 1,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 400,
  },
]
`;

exports[`agGridColumnSizing updateColumnDefinitionsWithWidths growToFit should correctly enrich columns definition, manual resize map is empty by auto resized columns map is and growToFit on 1`] = `
Array [
  Object {
    "cellRenderer": "loadingRenderer",
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "index": 0,
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 400,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    ],
    "field": "m_0",
    "headerName": "Amount",
    "index": 1,
    "maxWidth": 2000,
    "measureIndex": 0,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 400,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "acugFHNJgsBy",
          "localIdentifier": "m_acugFHNJgsBy",
          "name": "Won",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1272",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1272",
        },
      },
    ],
    "field": "m_1",
    "headerName": "Won",
    "index": 2,
    "maxWidth": 2000,
    "measureIndex": 1,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 400,
  },
]
`;

exports[`agGridColumnSizing updateColumnDefinitionsWithWidths growToFit should set maxWidth to undefined when growToFit width si bigger than MANUALLY_SIZED_MAX_WIDTH 1`] = `
Array [
  Object {
    "cellRenderer": "loadingRenderer",
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "index": 0,
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 400,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    ],
    "field": "m_0",
    "headerName": "Amount",
    "index": 1,
    "maxWidth": undefined,
    "measureIndex": 0,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 2100,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "acugFHNJgsBy",
          "localIdentifier": "m_acugFHNJgsBy",
          "name": "Won",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1272",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1272",
        },
      },
    ],
    "field": "m_1",
    "headerName": "Won",
    "index": 2,
    "maxWidth": 2000,
    "measureIndex": 1,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 400,
  },
]
`;

exports[`agGridColumnSizing updateColumnDefinitionsWithWidths manually resized should correctly enrich columns definition by manually and auto resized columns and growToFit off 1`] = `
Array [
  Object {
    "cellRenderer": "loadingRenderer",
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "index": 0,
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 400,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    ],
    "field": "m_0",
    "headerName": "Amount",
    "index": 1,
    "maxWidth": 2000,
    "measureIndex": 0,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 100,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "acugFHNJgsBy",
          "localIdentifier": "m_acugFHNJgsBy",
          "name": "Won",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1272",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1272",
        },
      },
    ],
    "field": "m_1",
    "headerName": "Won",
    "index": 2,
    "maxWidth": 2000,
    "measureIndex": 1,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 116,
  },
]
`;

exports[`agGridColumnSizing updateColumnDefinitionsWithWidths manually resized should correctly enrich columns definition by manually and auto resized columns and growToFit on 1`] = `
Array [
  Object {
    "cellRenderer": "loadingRenderer",
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "index": 0,
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 400,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    ],
    "field": "m_0",
    "headerName": "Amount",
    "index": 1,
    "maxWidth": 2000,
    "measureIndex": 0,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 100,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "acugFHNJgsBy",
          "localIdentifier": "m_acugFHNJgsBy",
          "name": "Won",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1272",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1272",
        },
      },
    ],
    "field": "m_1",
    "headerName": "Won",
    "index": 2,
    "maxWidth": 2000,
    "measureIndex": 1,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 400,
  },
]
`;

exports[`agGridColumnSizing updateColumnDefinitionsWithWidths manually resized should correctly enrich columns definition by manually resized columns, auto resize map is empty and growToFit off 1`] = `
Array [
  Object {
    "cellRenderer": "loadingRenderer",
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "index": 0,
    "maxWidth": 2000,
    "suppressSizeToFit": true,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 400,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    ],
    "field": "m_0",
    "headerName": "Amount",
    "index": 1,
    "maxWidth": 2000,
    "measureIndex": 0,
    "suppressSizeToFit": true,
    "type": "MEASURE_COLUMN",
    "width": 100,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "acugFHNJgsBy",
          "localIdentifier": "m_acugFHNJgsBy",
          "name": "Won",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1272",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1272",
        },
      },
    ],
    "field": "m_1",
    "headerName": "Won",
    "index": 2,
    "maxWidth": 2000,
    "measureIndex": 1,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 200,
  },
]
`;

exports[`agGridColumnSizing updateColumnDefinitionsWithWidths no column sizing should get column definitions with default width 1`] = `
Array [
  Object {
    "cellRenderer": "loadingRenderer",
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "index": 0,
    "maxWidth": 2000,
    "suppressSizeToFit": false,
    "type": "ROW_ATTRIBUTE_COLUMN",
    "width": 200,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "aangOxLSeztu",
          "localIdentifier": "m_aangOxLSeztu",
          "name": "Amount",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1271",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
      },
    ],
    "field": "m_0",
    "headerName": "Amount",
    "index": 1,
    "maxWidth": 2000,
    "measureIndex": 0,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 200,
  },
  Object {
    "drillItems": Array [
      Object {
        "measureHeaderItem": Object {
          "format": "$#,##0.00",
          "identifier": "acugFHNJgsBy",
          "localIdentifier": "m_acugFHNJgsBy",
          "name": "Won",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1272",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1272",
        },
      },
    ],
    "field": "m_1",
    "headerName": "Won",
    "index": 2,
    "maxWidth": 2000,
    "measureIndex": 1,
    "suppressSizeToFit": false,
    "type": "MEASURE_COLUMN",
    "width": 200,
  },
]
`;
